Create subfolders on local target